<resources>
    <string name="app_name">androidHomeTask01</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="register">REGISTER</string>
    <string name="next">NEXT</string>
    <string name="username">USERNAME</string>
    <string name="question_mark">\?</string>
    <string name="trivia">TRIVIA</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">LOG IN</string>
    <string name="todo">TODO</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="or">OR</string>
    <string name="up_with_email">Up with Email</string>
    <string name="game_now">Game now</string>
</resources>