<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_main">

    <TextView
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellowgreen"
        android:paddingBottom="5dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <RelativeLayout
        android:id="@+id/rel_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/triangle"
        android:paddingTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/log_in">

        <TextView
            android:id="@+id/text00101"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/question_mark"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/text001001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text00101"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/text00201"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text00101"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_toStartOf="@id/text001001"
            android:text="@string/question_mark"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/text00301"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text00101"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_toEndOf="@id/text001001"
            android:text="@string/question_mark"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/text001001"
            android:layout_centerHorizontal="true"
            android:src="@drawable/owl"
            android:contentDescription="@string/todo">

        </ImageView>

        <TextView
            android:id="@+id/text004401"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image2"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:paddingBottom="50dp"
            android:text="@string/trivia"
            android:textSize="30sp">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text004401"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/down">

        </ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/button_shape_facebook"
        app:layout_constraintTop_toBottomOf="@id/rel_lay">

        <Button
            android:id="@+id/button_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:drawableLeft="@drawable/facebook_icon"
            android:focusable="true"
            android:paddingHorizontal="10dp"
            android:text="@string/log_in_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/rel_lay1">

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingHorizontal="10dp"
            android:text="@string/or"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/text_or"
            android:background="@color/gray" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/text_or"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/text_in_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_below="@id/text_or"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="10dp"
            android:clickable="true"
            android:text="@string/up_with_email"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:focusable="true" />


    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rel_lay2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_shape_game"
        android:backgroundTint="@color/teal_200"
        android:layout_marginHorizontal="30dp"
        android:text="@string/game_now"
        android:textColor="@color/white"
        android:paddingBottom="30dp"
        android:textSize="15sp" />

</androidx.constraintlayout.widget.ConstraintLayout>