<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/liner1"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/yellowgreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back"
            android:layout_marginTop="12dp"
            android:paddingBottom="10sp"
            android:layout_marginStart="20dp"
            android:layout_width="34dp"
            android:clickable="true"
            android:layout_height="34dp"
            android:contentDescription="@string/todo"
            android:focusable="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:paddingBottom="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/liner2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_shape_top"
        app:layout_constraintTop_toBottomOf="@id/liner1">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="@color/white"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/username"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:focusable="true"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:autofillHints="" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="2dp"
        android:background="@color/darkkhaki"
        app:layout_constraintTop_toBottomOf="@id/liner2"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/white"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:focusable="true"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_shape_bottom"
        app:layout_constraintTop_toBottomOf="@id/liner3"
        >

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/white"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:focusable="true"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        app:layout_constraintTop_toBottomOf="@id/liner4">

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            android:clickable="true"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:text="@string/next"
            android:drawableEnd="@drawable/ic_launcher34"
            android:focusable="true">

        </Button>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/liner6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/liner5"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/text001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/question_mark">
        </TextView>

        <TextView
            android:id="@+id/text0010"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text001"
            android:textColor="@color/white"
            android:textSize="25sp">
        </TextView>
        <TextView
            android:id="@+id/text002"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text001"
            android:layout_toStartOf="@id/text0010"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/question_mark">
        </TextView>
        <TextView
            android:id="@+id/text003"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginStart="20sp"
            android:layout_below="@id/text001"
            android:layout_toEndOf="@id/text0010"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/question_mark">
        </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/liner6"

        android:background="@drawable/oval">
        <ImageView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/owl"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo">

        </ImageView>
        <TextView
            android:id="@+id/text0044"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/image"
            android:paddingTop="10dp"
            android:paddingBottom="150dp"
            android:text="@string/trivia"
            android:textSize="30sp">

        </TextView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>